--- a/src/main/resources/com/confer/imgstoremini/AddImageUI.fxml
+++ b/src/main/resources/com/confer/imgstoremini/AddImageUI.fxml
@@ -11,8 +11,8 @@
          <TextArea fx:id="tagsImg" minHeight="100.0" minWidth="500.0" promptText="TAGS" />
          <HBox alignment="TOP_CENTER" spacing="10.0">
             <children>
-               <TextField fx:id="imageTitleTxtArea" promptText="Image Title" />
-               <TextField fx:id="imageTypeArea" disable="true" promptText="Image Type" />
+               <TextField fx:id="imageTitleTxtArea" prefHeight="25.0" prefWidth="245.0" promptText="Image Title" HBox.hgrow="ALWAYS" />
+               <TextField fx:id="imageTypeArea" disable="true" prefHeight="25.0" prefWidth="271.0" promptText="Image Type" HBox.hgrow="ALWAYS" />
             </children>
             <padding>
                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -25,6 +25,9 @@
             </content>
          </ScrollPane>
          <Button fx:id="addBtn" mnemonicParsing="false" onAction="#buttonClick" text="Add" />
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
       </VBox>
    </children>
    <padding>
