--- a/src/main/resources/com/confer/imgstoremini/MainUI.fxml
+++ b/src/main/resources/com/confer/imgstoremini/MainUI.fxml
@@ -6,7 +6,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.confer.imgstoremini.controllers.MainUIController">
    <children>
-      <ScrollPane fx:id="rootScrollPane" fitToHeight="true" fitToWidth="true" AnchorPane.topAnchor="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <ScrollPane fx:id="rootScrollPane" fitToHeight="true" fitToWidth="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <content>
             <VBox alignment="TOP_CENTER" spacing="10.0">
                <children>
@@ -19,13 +19,14 @@
                         <Insets bottom="10.0" top="10.0" />
                      </padding>
                   </HBox>
-                  <Button fx:id="addImgBtn" onAction="#buttonClick" mnemonicParsing="false" text="Add Image" />
+                  <Button fx:id="addImgBtn" mnemonicParsing="false" onAction="#buttonClick" text="Add Image" />
                   <ScrollPane fx:id="imageScrollPane" minHeight="500.0" minWidth="750.0" pannable="true" VBox.vgrow="ALWAYS">
                      <content>
                         <TilePane fx:id="imageViews" />
                      </content>
                   </ScrollPane>
                   <Pagination fx:id="paginationChoice" VBox.vgrow="NEVER" />
+                  <Button fx:id="backBtn" onAction="#buttonClick" mnemonicParsing="false" text="Back" />
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -35,4 +36,3 @@
       </ScrollPane>
    </children>
 </AnchorPane>
-
