--- a/src/main/resources/com/confer/imgstoremini/MainUI.fxml
+++ b/src/main/resources/com/confer/imgstoremini/MainUI.fxml
@@ -19,6 +19,15 @@
                         <Insets bottom="10.0" top="10.0" />
                      </padding>
                   </HBox>
+                  <HBox layoutX="20.0" layoutY="20.0" spacing="10.0">
+                     <children>
+                        <Button fx:id="regexSearchBTN" mnemonicParsing="false" onAction="#buttonClick" text="Regex Search" />
+                        <TextField fx:id="regeximgSearchBox" promptText="Tag:&quot;Some Tag&quot; Title:&quot;Some Title&quot;" HBox.hgrow="ALWAYS" />
+                     </children>
+                     <padding>
+                        <Insets bottom="10.0" top="10.0" />
+                     </padding>
+                  </HBox>
                   <Button fx:id="addImgBtn" mnemonicParsing="false" onAction="#buttonClick" text="Add Image" />
                   <ScrollPane fx:id="imageScrollPane" minHeight="500.0" minWidth="750.0" pannable="true" VBox.vgrow="ALWAYS">
                      <content>
@@ -26,7 +35,7 @@
                      </content>
                   </ScrollPane>
                   <Pagination fx:id="paginationChoice" VBox.vgrow="NEVER" />
-                  <Button fx:id="backBtn" onAction="#buttonClick" mnemonicParsing="false" text="Back" />
+                  <Button fx:id="backBtn" mnemonicParsing="false" onAction="#buttonClick" text="Back" />
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
