--- a/src/main/resources/com/confer/imgstoremini/EntryUI.fxml
+++ b/src/main/resources/com/confer/imgstoremini/EntryUI.fxml
@@ -12,12 +12,13 @@
     <HBox alignment="TOP_CENTER" spacing="10.0">
         <children>
             <Button fx:id="createNew" alignment="CENTER" onAction="#buttonClick" text="Create New" />
-         <Button fx:id="loadDefaultBtn" onAction="#buttonClick" mnemonicParsing="false" text="Load Default" />
+         <Button fx:id="loadDefaultBtn" mnemonicParsing="false" onAction="#buttonClick" text="Load Default" />
             <Button fx:id="loadDB" alignment="CENTER" onAction="#buttonClick" text="Load DB" HBox.hgrow="ALWAYS">
                 <HBox.margin>
                     <Insets />
                 </HBox.margin>
             </Button>
+         <Button fx:id="settingsBTN" onAction="#buttonClick" mnemonicParsing="false" text="Settings" />
         </children>
     </HBox>
 </VBox>
