--- a/src/main/resources/com/confer/imgstoremini/EntryUI.fxml
+++ b/src/main/resources/com/confer/imgstoremini/EntryUI.fxml
@@ -4,21 +4,25 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
+<?import java.net.URL?>
 <VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.confer.imgstoremini.controllers.EntryUIController">
+    <stylesheets>
+        <URL value="@styles/dark-theme.css" />
+    </stylesheets>
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-   <TextField fx:id="outputArea" disable="true" prefHeight="25.0" prefWidth="215.0" />
+    <TextField fx:id="outputArea" disable="true" prefHeight="25.0" prefWidth="215.0" />
     <HBox alignment="TOP_CENTER" spacing="10.0">
         <children>
             <Button fx:id="createNew" alignment="CENTER" onAction="#buttonClick" text="Create New" />
-         <Button fx:id="loadDefaultBtn" mnemonicParsing="false" onAction="#buttonClick" text="Load Default" />
+            <Button fx:id="loadDefaultBtn" mnemonicParsing="false" onAction="#buttonClick" text="Load Default" />
             <Button fx:id="loadDB" alignment="CENTER" onAction="#buttonClick" text="Load DB" HBox.hgrow="ALWAYS">
                 <HBox.margin>
                     <Insets />
                 </HBox.margin>
             </Button>
-         <Button fx:id="settingsBTN" onAction="#buttonClick" mnemonicParsing="false" text="Settings" />
+            <Button fx:id="settingsBTN" onAction="#buttonClick" mnemonicParsing="false" text="Settings" />
         </children>
     </HBox>
 </VBox>
