--- a/src/main/resources/com/confer/imgstoremini/MainUI.fxml
+++ b/src/main/resources/com/confer/imgstoremini/MainUI.fxml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.confer.imgstoremini.controllers.MainUIController">
+<AnchorPane stylesheets="styles/dark-theme.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.confer.imgstoremini.controllers.MainUIController">
+   <stylesheets>
+      <URL value="@styles/dark-theme.css" />
+   </stylesheets>
    <children>
       <ScrollPane fx:id="rootScrollPane" fitToHeight="true" fitToWidth="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <content>
@@ -30,17 +34,17 @@
                   </HBox>
                   <HBox alignment="TOP_CENTER" spacing="10.0">
                      <children>
-                        <Button fx:id="resetBTN" mnemonicParsing="false"  onAction="#buttonClick" text="Reset" />
+                        <Button fx:id="resetBTN" mnemonicParsing="false" onAction="#buttonClick" text="Reset" />
                         <Button fx:id="addImgBtn" mnemonicParsing="false" onAction="#buttonClick" text="Add Image" />
+                        <Button fx:id="backBtn" mnemonicParsing="false" onAction="#buttonClick" text="Back" />
                      </children>
                   </HBox>
-                  <ScrollPane fx:id="imageScrollPane" minHeight="500.0" minWidth="750.0" pannable="true" VBox.vgrow="ALWAYS">
+                  <ScrollPane fx:id="imageScrollPane" pannable="true" VBox.vgrow="ALWAYS">
                      <content>
                         <TilePane fx:id="imageViews" />
                      </content>
                   </ScrollPane>
                   <Pagination fx:id="paginationChoice" VBox.vgrow="NEVER" />
-                  <Button fx:id="backBtn" mnemonicParsing="false" onAction="#buttonClick" text="Back" />
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
