--- a/src/main/resources/com/confer/imgstoremini/PreviewImageComponentUI.fxml
+++ b/src/main/resources/com/confer/imgstoremini/PreviewImageComponentUI.fxml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
 <AnchorPane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.confer.imgstoremini.controllers.PreviewImageComponentUIController">
+   <stylesheets>
+      <URL value="@styles/dark-theme.css" />
+   </stylesheets>
    <children>
       <VBox alignment="TOP_CENTER" spacing="10.0">
          <children>
             <ImageView fx:id="imagePlace" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
-            <Label fx:id="dateAddedLbl" text="Date Added: %s" />
+            <Label text="Date Added" />
+            <Label fx:id="dateAddedLbl" text="\%s %s" />
             <Label fx:id="imageTitleLbl" text="Image Title" />
             <HBox alignment="TOP_CENTER" spacing="10.0">
                <children>
