--- a/src/main/resources/com/confer/imgstoremini/SettingsConfigUI.fxml
+++ b/src/main/resources/com/confer/imgstoremini/SettingsConfigUI.fxml
@@ -1,44 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
 <AnchorPane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.confer.imgstoremini.controllers.SettingsConfigUIController">
+   <stylesheets>
+      <URL value="@styles/dark-theme.css" />
+   </stylesheets>
    <children>
-      <VBox alignment="TOP_CENTER" spacing="10.0">
-         <children>
-            <HBox alignment="TOP_CENTER" spacing="10.0" VBox.vgrow="ALWAYS">
+      <ScrollPane pannable="true" fitToHeight="true" fitToWidth="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <content>
+            <VBox alignment="TOP_CENTER" spacing="10.0">
                <children>
-                  <Label text="Page Size:" />
-                  <Spinner fx:id="pageSizeSPN" />
-               </children>
-            </HBox>
-            <HBox spacing="10.0"  VBox.vgrow="ALWAYS">
-               <children>
-                  <Button fx:id="selectDefaultBTN" mnemonicParsing="false" onAction="#buttonClick" text="Select Default DB" />
-                  <TextField fx:id="selectedDefaultTxtField" disable="true" prefHeight="25.0" prefWidth="356.0" />
-               </children>
-            </HBox>
-            <HBox spacing="10.0" VBox.vgrow="ALWAYS">
-               <children>
-                  <Button fx:id="newdbBTN" mnemonicParsing="false" onAction="#buttonClick" text="New DB" />
-                  <TextField fx:id="dbNameTxtField" prefHeight="25.0" prefWidth="412.0" />
-               </children>
-            </HBox>
-            <HBox alignment="TOP_CENTER" spacing="10.0"  VBox.vgrow="ALWAYS">
-               <children>
-                  <Button fx:id="saveBTN" mnemonicParsing="false" onAction="#buttonClick" text="Save" />
-                  <Button fx:id="cancelBTN" mnemonicParsing="false" onAction="#buttonClick" text="Cancel" />
+                  <HBox alignment="TOP_CENTER" spacing="10.0" VBox.vgrow="ALWAYS">
+                     <children>
+                        <Label text="Page Size:" HBox.hgrow="ALWAYS" />
+                        <Spinner fx:id="pageSizeSPN" HBox.hgrow="ALWAYS" />
+                     </children>
+                  </HBox>
+                  <HBox spacing="10.0" VBox.vgrow="ALWAYS">
+                     <children>
+                        <Button fx:id="selectDefaultBTN" mnemonicParsing="false" onAction="#buttonClick" text="Select Default DB" HBox.hgrow="ALWAYS" />
+                        <TextField fx:id="selectedDefaultTxtField" disable="true" prefHeight="25.0" prefWidth="356.0" HBox.hgrow="ALWAYS" />
+                     </children>
+                  </HBox>
+                  <HBox spacing="10.0" VBox.vgrow="ALWAYS">
+                     <children>
+                        <Button fx:id="newdbBTN" mnemonicParsing="false" onAction="#buttonClick" text="New DB" HBox.hgrow="ALWAYS" />
+                        <TextField fx:id="dbNameTxtField" prefHeight="25.0" prefWidth="412.0" HBox.hgrow="ALWAYS" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="TOP_CENTER" spacing="10.0" VBox.vgrow="ALWAYS">
+                     <children>
+                        <Button fx:id="saveBTN" mnemonicParsing="false" onAction="#buttonClick" text="Save" HBox.hgrow="ALWAYS" />
+                        <Button fx:id="cancelBTN" mnemonicParsing="false" onAction="#buttonClick" text="Cancel" HBox.hgrow="ALWAYS" />
+                     </children>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </HBox>
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
-            </HBox>
-         </children>
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding>
-      </VBox>
+            </VBox>
+         </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
