--- a/src/main/resources/com/confer/imgstoremini/SettingsConfigUI.fxml
+++ b/src/main/resources/com/confer/imgstoremini/SettingsConfigUI.fxml
@@ -32,6 +32,24 @@
                         <Spinner fx:id="kmeansSPN" HBox.hgrow="ALWAYS" />
                      </children>
                   </HBox>
+                  <HBox alignment="TOP_CENTER" layoutX="20.0" layoutY="130.0" spacing="10.0">
+                     <children>
+                        <Label text="Mean Shift Iterations" HBox.hgrow="ALWAYS" />
+                        <Spinner fx:id="meanshiftSPN" HBox.hgrow="ALWAYS" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="TOP_CENTER" layoutX="20.0" layoutY="185.0" spacing="10.0">
+                     <children>
+                        <Label text="Mean Shift Convergence" HBox.hgrow="ALWAYS" />
+                        <Spinner fx:id="meanShiftConvergenceSPN" HBox.hgrow="ALWAYS" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="TOP_CENTER" layoutX="20.0" layoutY="240.0" spacing="10.0">
+                     <children>
+                        <Label text="Preferred Processor" HBox.hgrow="ALWAYS" />
+                        <ChoiceBox fx:id="processorChoiceBox" prefWidth="150.0" />
+                     </children>
+                  </HBox>
                   <HBox spacing="10.0" VBox.vgrow="ALWAYS">
                      <children>
                         <Button fx:id="selectDefaultBTN" mnemonicParsing="false" onAction="#buttonClick" text="Select Default DB" HBox.hgrow="ALWAYS" />
