--- a/src/main/resources/com/confer/imgstoremini/AddImageUI.fxml
+++ b/src/main/resources/com/confer/imgstoremini/AddImageUI.fxml
@@ -11,29 +11,60 @@
       <URL value="@styles/dark-theme.css" />
    </stylesheets>
    <children>
-      <VBox alignment="TOP_CENTER" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <TextArea fx:id="tagsImg" minHeight="87.0" minWidth="500.0" prefHeight="87.0" prefWidth="546.0" promptText="TAGS" />
-         <HBox alignment="TOP_CENTER" spacing="10.0">
-            <children>
-               <TextField fx:id="imageTitleTxtArea" prefHeight="25.0" prefWidth="245.0" promptText="Image Title" HBox.hgrow="ALWAYS" />
-               <TextField fx:id="imageTypeArea" disable="true" prefHeight="25.0" prefWidth="271.0" promptText="Image Type" HBox.hgrow="ALWAYS" />
-            </children>
-            <padding>
-               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-            </padding>
-         </HBox>
-         <HBox alignment="TOP_CENTER">
-            <children>
-               <Button fx:id="pasteBTN" onAction="#buttonClick" mnemonicParsing="false" text="Paste Image" />
-               <Button fx:id="selectImage" mnemonicParsing="false" onAction="#buttonClick" text="Select Image" />
-            </children>
-         </HBox>
-         <ScrollPane fx:id="imageScrollPane" fitToHeight="true" fitToWidth="true" prefHeight="250.0" prefWidth="546.0" VBox.vgrow="ALWAYS">
-            <content>
-               <ImageView fx:id="imageDisp" pickOnBounds="true" preserveRatio="true" />
-            </content>
-         </ScrollPane>
-         <Button fx:id="addBtn" mnemonicParsing="false" onAction="#buttonClick" text="Add" />
+      <VBox alignment="TOP_CENTER" spacing="15.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <!-- Tags Section -->
+            <TitledPane text="Image Tags" expanded="true">
+               <content>
+                  <TextArea fx:id="tagsImg" minHeight="87.0" minWidth="500.0" prefHeight="87.0" prefWidth="546.0" promptText="Enter tags for the image" />
+               </content>
+            </TitledPane>
+
+            <!-- Image Details Section -->
+            <TitledPane text="Image Details" expanded="true">
+               <content>
+                  <HBox alignment="CENTER_LEFT" spacing="10.0">
+                     <children>
+                        <TextField fx:id="imageTitleTxtArea" prefHeight="25.0" prefWidth="245.0" promptText="Image Title" HBox.hgrow="ALWAYS" />
+                        <TextField fx:id="imageTypeArea" disable="true" prefHeight="25.0" prefWidth="271.0" promptText="Image Type" HBox.hgrow="ALWAYS" />
+                     </children>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </HBox>
+               </content>
+            </TitledPane>
+
+            <!-- Image Selection Section -->
+            <TitledPane text="Image Selection" expanded="true">
+               <content>
+                  <HBox alignment="CENTER" spacing="10.0">
+                     <children>
+                        <Button fx:id="pasteBTN" onAction="#buttonClick" mnemonicParsing="false" text="Paste Image" />
+                        <Button fx:id="selectImage" mnemonicParsing="false" onAction="#buttonClick" text="Select Image" />
+                     </children>
+                  </HBox>
+               </content>
+            </TitledPane>
+
+            <!-- Image Display Section -->
+            <TitledPane text="Preview Image" expanded="true">
+               <content>
+                  <ScrollPane fx:id="imageScrollPane" fitToHeight="true" fitToWidth="true" prefHeight="250.0" prefWidth="546.0">
+                     <content>
+                        <ImageView fx:id="imageDisp" pickOnBounds="true" preserveRatio="true" />
+                     </content>
+                  </ScrollPane>
+               </content>
+            </TitledPane>
+
+            <!-- Add Button Section -->
+            <HBox alignment="CENTER">
+               <children>
+                  <Button fx:id="addBtn" mnemonicParsing="false" onAction="#buttonClick" text="Add Image" />
+               </children>
+            </HBox>
+         </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
@@ -43,3 +74,4 @@
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
 </AnchorPane>
+
