--- a/src/main/resources/com/confer/imgstoremini/MainUI.fxml
+++ b/src/main/resources/com/confer/imgstoremini/MainUI.fxml
@@ -12,41 +12,58 @@
    <children>
       <ScrollPane fx:id="rootScrollPane" fitToHeight="true" fitToWidth="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <content>
-            <VBox alignment="TOP_CENTER" spacing="10.0">
+            <VBox alignment="TOP_CENTER" spacing="15.0">
                <children>
-                  <HBox spacing="10.0">
-                     <children>
-                        <Button fx:id="searchBTN" mnemonicParsing="false" onAction="#buttonClick" text="Search" />
-                        <TextField fx:id="imgSearchBox" HBox.hgrow="ALWAYS" />
-                     </children>
-                     <padding>
-                        <Insets bottom="10.0" top="10.0" />
-                     </padding>
-                  </HBox>
-                  <HBox layoutX="20.0" layoutY="20.0" spacing="10.0">
-                     <children>
-                        <Button fx:id="regexSearchBTN" mnemonicParsing="false" onAction="#buttonClick" text="Regex Search" />
-                        <TextField fx:id="regeximgSearchBox" promptText="Tag:&quot;Some Tag&quot; Title:&quot;Some Title&quot;" HBox.hgrow="ALWAYS" />
-                     </children>
-                     <padding>
-                        <Insets bottom="10.0" top="10.0" />
-                     </padding>
-                  </HBox>
-                  <HBox alignment="TOP_CENTER" spacing="10.0">
-                     <children>
-                        <Button fx:id="goToPaletteExtractorBTN" layoutX="58.0" layoutY="20.0" mnemonicParsing="false" onAction="#buttonClick" text="Palette Extractor" />
-                        <Button fx:id="resetBTN" mnemonicParsing="false" onAction="#buttonClick" text="Reset" />
-                        <Button fx:id="addImgBtn" mnemonicParsing="false" onAction="#buttonClick" text="Add Image" />
-                        <Button fx:id="settingsBTN" layoutX="157.0" layoutY="20.0" mnemonicParsing="false" onAction="#buttonClick" text="Settings" />
-                        <Button fx:id="backBtn" mnemonicParsing="false" onAction="#buttonClick" text="Back" />
-                     </children>
-                  </HBox>
-                  <ScrollPane fx:id="imageScrollPane" pannable="true" VBox.vgrow="ALWAYS">
+                  <!-- Search Section -->
+                  <TitledPane expanded="true" text="Search Options">
                      <content>
-                        <TilePane fx:id="imageViews" />
+                        <VBox spacing="10.0">
+                           <children>
+                              <HBox alignment="CENTER_LEFT" spacing="10.0">
+                                 <children>
+                                    <Button fx:id="searchBTN" mnemonicParsing="false" onAction="#buttonClick" text="Search" />
+                                    <TextField fx:id="imgSearchBox" promptText="Search for images" HBox.hgrow="ALWAYS" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER_LEFT" spacing="10.0">
+                                 <children>
+                                    <Button fx:id="regexSearchBTN" mnemonicParsing="false" onAction="#buttonClick" text="Regex Search" />
+                                    <TextField fx:id="regeximgSearchBox" promptText="Tag:&quot;Some Tag&quot; Title:&quot;Some title&quot;" HBox.hgrow="ALWAYS" />
+                                 </children>
+                              </HBox>
+                           </children>
+                        </VBox>
                      </content>
-                  </ScrollPane>
-                  <Pagination fx:id="paginationChoice" VBox.vgrow="NEVER" />
+                  </TitledPane>
+
+                  <!-- Actions Section -->
+                  <TitledPane expanded="true" text="Actions">
+                     <content>
+                        <HBox alignment="CENTER" spacing="10.0">
+                           <children>
+                              <Button fx:id="goToPaletteExtractorBTN" mnemonicParsing="false" onAction="#buttonClick" text="Palette Extractor" />
+                              <Button fx:id="resetBTN" mnemonicParsing="false" onAction="#buttonClick" text="Reset" />
+                              <Button fx:id="addImgBtn" mnemonicParsing="false" onAction="#buttonClick" text="Add Image" />
+                              <Button fx:id="settingsBTN" mnemonicParsing="false" onAction="#buttonClick" text="Settings" />
+                              <Button fx:id="backBtn" mnemonicParsing="false" onAction="#buttonClick" text="Back" />
+                           </children>
+                        </HBox>
+                     </content>
+                  </TitledPane>
+
+                  <!-- Image Display Section -->
+                  <TitledPane expanded="true" text="Image Viewer">
+                     <content>
+                        <ScrollPane fx:id="imageScrollPane" fitToHeight="true" fitToWidth="true" pannable="true">
+                           <content>
+                              <TilePane fx:id="imageViews" hgap="10.0" prefColumns="3" vgap="10.0" />
+                           </content>
+                        </ScrollPane>
+                     </content>
+                  </TitledPane>
+
+                  <!-- Pagination Section -->
+                  <Pagination fx:id="paginationChoice" maxPageIndicatorCount="5" VBox.vgrow="NEVER" />
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
