--- a/src/main/resources/com/confer/imgstoremini/PaletteUI.fxml
+++ b/src/main/resources/com/confer/imgstoremini/PaletteUI.fxml
@@ -11,24 +11,43 @@
       <URL value="@styles/dark-theme.css" />
    </stylesheets>
    <children>
-      <VBox alignment="TOP_CENTER" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <HBox alignment="TOP_CENTER">
-            <children>
-               <Button fx:id="pasteBTN" mnemonicParsing="false" onAction="#buttonClick" text="Paste Image" />
-               <Button fx:id="selectImage" mnemonicParsing="false" onAction="#buttonClick" text="Select Image" />
-               <Button fx:id="settingBTN" layoutX="287.0" layoutY="20.0" mnemonicParsing="false" onAction="#buttonClick" text="Settings" />
-            </children>
-         </HBox>
-         <HBox>
-            <children>
-               <Button fx:id="extractPaletteBTN" mnemonicParsing="false" onAction="#buttonClick" text="Extract Palette" />
-            </children>
-         </HBox>
-         <ScrollPane fx:id="imageScrollPane" fitToHeight="true" fitToWidth="true" prefHeight="250.0" prefWidth="546.0" VBox.vgrow="ALWAYS">
-            <content>
-               <ImageView fx:id="imageDisp" pickOnBounds="true" preserveRatio="true" />
-            </content>
-         </ScrollPane>
+      <VBox alignment="TOP_CENTER" spacing="15.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <!-- Image Selection Section -->
+            <TitledPane expanded="true" text="Image Selection">
+               <content>
+                  <HBox alignment="CENTER" spacing="10.0">
+                     <children>
+                        <Button fx:id="pasteBTN" mnemonicParsing="false" onAction="#buttonClick" text="Paste Image" />
+                        <Button fx:id="selectImage" mnemonicParsing="false" onAction="#buttonClick" text="Select Image" />
+                        <Button fx:id="settingBTN" mnemonicParsing="false" onAction="#buttonClick" text="Settings" />
+                     </children>
+                  </HBox>
+               </content>
+            </TitledPane>
+
+            <!-- Palette Extraction Section -->
+            <TitledPane expanded="true" text="Palette Extraction">
+               <content>
+                  <HBox alignment="CENTER">
+                     <children>
+                        <Button fx:id="extractPaletteBTN" mnemonicParsing="false" onAction="#buttonClick" text="Extract Palette" />
+                     </children>
+                  </HBox>
+               </content>
+            </TitledPane>
+
+            <!-- Image Display Section -->
+            <TitledPane expanded="true" text="Image Preview">
+               <content>
+                  <ScrollPane fx:id="imageScrollPane" fitToHeight="true" fitToWidth="true" hbarPolicy="ALWAYS" pannable="true" vbarPolicy="ALWAYS">
+                     <content>
+                        <ImageView fx:id="imageDisp" pickOnBounds="true" preserveRatio="true" />
+                     </content>
+                  </ScrollPane>
+               </content>
+            </TitledPane>
+         </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
