--- a/src/main/resources/com/confer/imgstoremini/SettingsConfigUI.fxml
+++ b/src/main/resources/com/confer/imgstoremini/SettingsConfigUI.fxml
@@ -12,89 +12,80 @@
    <children>
       <ScrollPane fitToHeight="true" fitToWidth="true" pannable="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <content>
-            <VBox alignment="TOP_CENTER" spacing="15.0">
+            <VBox alignment="TOP_CENTER" spacing="15.0" prefWidth="400.0">
                <children>
-                  <!-- Page Size Section -->
-                  <HBox alignment="CENTER_LEFT" spacing="10.0" VBox.vgrow="ALWAYS">
-                     <children>
-                        <Label text="Page Size:" HBox.hgrow="ALWAYS" />
-                        <Spinner fx:id="pageSizeSPN" HBox.hgrow="ALWAYS" />
-                     </children>
-                  </HBox>
+                  <!-- General Settings Section -->
+                  <TitledPane text="General Settings" expanded="true">
+                     <content>
+                        <GridPane hgap="10.0" vgap="10.0" alignment="CENTER_LEFT">
+                           <children>
+                              <Label text="Page Size:" GridPane.rowIndex="0" GridPane.columnIndex="0" />
+                              <Spinner fx:id="pageSizeSPN" GridPane.rowIndex="0" GridPane.columnIndex="1" />
+                              <Label text="Region Cuts:" GridPane.rowIndex="1" GridPane.columnIndex="0" />
+                              <Spinner fx:id="regioncutsSPN" GridPane.rowIndex="1" GridPane.columnIndex="1" />
+                           </children>
+                        </GridPane>
+                     </content>
+                  </TitledPane>
 
-                  <!-- Region Cuts Section -->
-                  <HBox alignment="CENTER_LEFT" spacing="10.0" VBox.vgrow="ALWAYS">
-                     <children>
-                        <Label text="Region Cuts:" HBox.hgrow="ALWAYS" />
-                        <Spinner fx:id="regioncutsSPN" HBox.hgrow="ALWAYS" />
-                     </children>
-                  </HBox>
+                  <!-- Clustering Settings Section -->
+                  <TitledPane text="Clustering Settings" expanded="true">
+                     <content>
+                        <GridPane hgap="10.0" vgap="10.0" alignment="CENTER_LEFT">
+                           <children>
+                              <Label text="K Means Iterations:" GridPane.rowIndex="0" GridPane.columnIndex="0" />
+                              <Spinner fx:id="kmeansSPN" GridPane.rowIndex="0" GridPane.columnIndex="1" />
+                              <Label text="Mean Shift Iterations:" GridPane.rowIndex="1" GridPane.columnIndex="0" />
+                              <Spinner fx:id="meanshiftSPN" GridPane.rowIndex="1" GridPane.columnIndex="1" />
+                              <Label text="Mean Shift Convergence:" GridPane.rowIndex="2" GridPane.columnIndex="0" />
+                              <Spinner fx:id="meanShiftConvergenceSPN" GridPane.rowIndex="2" GridPane.columnIndex="1" />
+                              <Label text="Spectral Clustering Iterations:" GridPane.rowIndex="3" GridPane.columnIndex="0" />
+                              <Spinner fx:id="spectralSPN" GridPane.rowIndex="3" GridPane.columnIndex="1" />
+                           </children>
+                        </GridPane>
+                     </content>
+                  </TitledPane>
 
-                  <!-- K Means Iterations Section -->
-                  <HBox alignment="CENTER_LEFT" spacing="10.0" VBox.vgrow="ALWAYS">
-                     <children>
-                        <Label text="K Means Iterations:" HBox.hgrow="ALWAYS" />
-                        <Spinner fx:id="kmeansSPN" HBox.hgrow="ALWAYS" />
-                     </children>
-                  </HBox>
+                  <!-- Processor Selection Section -->
+                  <TitledPane text="Processor Selection" expanded="true">
+                     <content>
+                        <GridPane hgap="10.0" vgap="10.0" alignment="CENTER_LEFT">
+                           <children>
+                              <Label text="Preferred Processor:" GridPane.rowIndex="0" GridPane.columnIndex="0" />
+                              <ChoiceBox fx:id="processorChoiceBox" prefWidth="150.0" GridPane.rowIndex="0" GridPane.columnIndex="1" />
+                           </children>
+                        </GridPane>
+                     </content>
+                  </TitledPane>
 
-                  <!-- Mean Shift Iterations Section -->
-                  <HBox alignment="CENTER_LEFT" spacing="10.0" VBox.vgrow="ALWAYS">
-                     <children>
-                        <Label text="Mean Shift Iterations:" HBox.hgrow="ALWAYS" />
-                        <Spinner fx:id="meanshiftSPN" HBox.hgrow="ALWAYS" />
-                     </children>
-                  </HBox>
+                  <!-- Database Settings Section -->
+                  <TitledPane text="Database Settings" expanded="true">
+                     <content>
+                        <VBox spacing="10.0">
+                           <children>
+                              <HBox spacing="10.0">
+                                 <children>
+                                    <Button fx:id="selectDefaultBTN" mnemonicParsing="false" onAction="#buttonClick" text="Select Default DB" />
+                                    <TextField fx:id="selectedDefaultTxtField" disable="true" prefWidth="250.0" />
+                                 </children>
+                              </HBox>
+                              <HBox spacing="10.0">
+                                 <children>
+                                    <Button fx:id="newdbBTN" mnemonicParsing="false" onAction="#buttonClick" text="New DB" />
+                                    <TextField fx:id="dbNameTxtField" prefWidth="250.0" />
+                                 </children>
+                              </HBox>
+                           </children>
+                        </VBox>
+                     </content>
+                  </TitledPane>
 
-                  <!-- Spectral Clustering Iterations Section -->
-                  <HBox alignment="CENTER_LEFT" spacing="10.0" VBox.vgrow="ALWAYS">
+                  <!-- Save/Cancel Buttons -->
+                  <HBox alignment="CENTER" spacing="15.0">
                      <children>
-                        <Label text="Spectral Clustering Iterations:" HBox.hgrow="ALWAYS" />
-                        <Spinner fx:id="spectralSPN" HBox.hgrow="ALWAYS" />
+                        <Button fx:id="saveBTN" mnemonicParsing="false" onAction="#buttonClick" text="Save" />
+                        <Button fx:id="cancelBTN" mnemonicParsing="false" onAction="#buttonClick" text="Cancel" />
                      </children>
-                  </HBox>
-
-                  <!-- Mean Shift Convergence Section -->
-                  <HBox alignment="CENTER_LEFT" spacing="10.0" VBox.vgrow="ALWAYS">
-                     <children>
-                        <Label text="Mean Shift Convergence:" HBox.hgrow="ALWAYS" />
-                        <Spinner fx:id="meanShiftConvergenceSPN" HBox.hgrow="ALWAYS" />
-                     </children>
-                  </HBox>
-
-                  <!-- Preferred Processor Section -->
-                  <HBox alignment="CENTER_LEFT" spacing="10.0" VBox.vgrow="ALWAYS">
-                     <children>
-                        <Label text="Preferred Processor:" HBox.hgrow="ALWAYS" />
-                        <ChoiceBox fx:id="processorChoiceBox" prefWidth="150.0" />
-                     </children>
-                  </HBox>
-
-                  <!-- Select Default DB Section -->
-                  <HBox alignment="CENTER_LEFT" spacing="10.0" VBox.vgrow="ALWAYS">
-                     <children>
-                        <Button fx:id="selectDefaultBTN" mnemonicParsing="false" onAction="#buttonClick" text="Select Default DB" HBox.hgrow="ALWAYS" />
-                        <TextField fx:id="selectedDefaultTxtField" disable="true" prefHeight="25.0" prefWidth="356.0" HBox.hgrow="ALWAYS" />
-                     </children>
-                  </HBox>
-
-                  <!-- New DB Section -->
-                  <HBox alignment="CENTER_LEFT" spacing="10.0" VBox.vgrow="ALWAYS">
-                     <children>
-                        <Button fx:id="newdbBTN" mnemonicParsing="false" onAction="#buttonClick" text="New DB" HBox.hgrow="ALWAYS" />
-                        <TextField fx:id="dbNameTxtField" prefHeight="25.0" prefWidth="412.0" HBox.hgrow="ALWAYS" />
-                     </children>
-                  </HBox>
-
-                  <!-- Save/Cancel Buttons Section -->
-                  <HBox alignment="CENTER" spacing="10.0" VBox.vgrow="ALWAYS">
-                     <children>
-                        <Button fx:id="saveBTN" mnemonicParsing="false" onAction="#buttonClick" text="Save" HBox.hgrow="ALWAYS" />
-                        <Button fx:id="cancelBTN" mnemonicParsing="false" onAction="#buttonClick" text="Cancel" HBox.hgrow="ALWAYS" />
-                     </children>
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding>
                   </HBox>
                </children>
                <padding>
